--- a/src/app/get-email/get-email.component.html
+++ b/src/app/get-email/get-email.component.html
@@ -1,1 +1,17 @@
-<p>get-email works!</p>
+<div class="col-md-6 offset-md-3">
+    <br>
+    <br>
+    <h3>Enter the Email ID for Customer search: </h3>
+    <br>
+    <form (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label>Email ID: </label>
+        <input type="email" class="form-control" id="email" [(ngModel)]="email" name="email">
+      </div>
+      <br>
+      <button class="btn btn-success" type="submit">Submit</button>
+    </form>
+  </div>
+  
+  
+  
