--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark" >
     <ul class="navbar-nav">
       <li class="nav-item">
         <a routerLink="homepage" routerLinkActive="active" class="nav-link">Home</a>
@@ -13,7 +13,7 @@
   </nav>
   <br>
   <br>
-  <h1 class="text-center">{{title}}</h1>
+  <h1 class="text-center">Customer Management System</h1>
   <br>
   <div class="container">
      <router-outlet></router-outlet>
