--- a/src/app/display-by-id/display-by-id.component.html
+++ b/src/app/display-by-id/display-by-id.component.html
@@ -1,1 +1,25 @@
-<p>display-by-id works!</p>
+<h2>Customer Details:</h2>
+<br>
+<table class="table table-striped">
+  <thead>
+  <tr>
+    <th>ID</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Mobile</th>
+    <th>Address</th>
+    <th>email</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>{{customer.id}}</td>
+    <td>{{customer.firstName}}</td>
+    <td>{{customer.lastName}}</td>
+    <td>{{customer.mobile}}</td>
+    <td>{{customer.address}}</td>
+    <td>{{customer.email}}</td>
+  </tr>
+  </tbody>
+</table>
+
