--- a/src/app/get-id-find/get-id-find.component.html
+++ b/src/app/get-id-find/get-id-find.component.html
@@ -1,1 +1,17 @@
-<p>get-id-find works!</p>
+<div class="col-md-6 offset-md-3">
+    <br>
+    <br>
+    <h4>Get ID for searching a Customer</h4>
+    <br>
+    <form (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label>ID: </label>
+        <input type="number" class="form-control" id="id" [(ngModel)]="id" name="id">
+      </div>
+      <br>
+      <button class="btn btn-success" type="submit">Submit</button>
+    </form>
+  </div>
+  
+  
+  
