--- a/src/app/update-customer/update-customer.component.html
+++ b/src/app/update-customer/update-customer.component.html
@@ -1,1 +1,55 @@
-<p>update-customer works!</p>
+<div class="col-md-6 offset-md-3">
+    <h3>Update Customer</h3>
+    <br>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label>First Name: </label>
+        <input formControlName="name" type="text" class="form-control" id="firstName" [(ngModel)]="customer.firstName" name="firstName">
+        <div *ngIf="f['name'].touched && f['name'].invalid" class="alert alert-danger">
+          <div *ngIf="f['name'].errors && f['name'].errors['required']">First Name is Mandatory!!!</div>
+          <div *ngIf="f['name'].errors && f['name'].errors['minlength']">Name should be 3 character.</div>
+        </div>
+      </div>
+  
+      <div class="form-group">
+        <label>Last Name: </label>
+        <input formControlName="lname" type="text" class="form-control" id="lastName" [(ngModel)]="customer.lastName" name="lastName">
+        <div *ngIf="f['lname'].touched && f['lname'].invalid" class="alert alert-danger">
+          <div *ngIf="f['lname'].errors && f['lname'].errors['required']">Last Name is Mandatory!!!</div>
+          <div *ngIf="f['lname'].errors && f['lname'].errors['minlength']">Last Name should be 3 character.</div>
+        </div>
+      </div>
+  
+      <div class="form-group">
+        <label>Mobile: </label>
+        <input formControlName="mobile" type="number" class="form-control" id="mobile" [(ngModel)]="customer.mobile" name="mobile">
+        <div *ngIf="f['mobile'].touched && f['mobile'].invalid" class="alert alert-danger" >
+          <div *ngIf="f['mobile'].errors && f['mobile'].errors['required']">Mobile no. is Mandatory...</div>
+          <div *ngIf="f['mobile'].errors && f['mobile'].errors['min']">Minimum no. of 10 digits!!!</div>
+        </div>
+      </div>
+  
+      <div class="form-group">
+        <label>Address: </label>
+        <input  formControlName="address" type="text" class="form-control" id="address" [(ngModel)]="customer.address" name="address">
+        <div *ngIf="f['address'].touched && f['address'].invalid" class="alert alert-danger">
+          <div *ngIf="f['address'].errors && f['address'].errors['required']">Typing Address is Mandatory...</div>
+          <div *ngIf="f['address'].errors && f['address'].errors['maxlength']">Address must not be greater than 12 characters!!!</div>
+        </div>
+      </div>
+  
+      <div class="form-group">
+        <label>Email ID: </label>
+        <input formControlName="email" type="email" class="form-control" id="email" [(ngModel)]="customer.email" name="email">
+        <div *ngIf="f['email'].touched && f['email'].invalid" class="alert alert-danger">
+          <div *ngIf="f['email'].errors && f['email'].errors['required']">Email is required.</div>
+          <div *ngIf="f['email'].errors && f['email'].errors['email']">Please, you must enter valid email address.</div>
+        </div>
+      </div>
+      <br>
+      <button class="btn btn-success" type="submit">Submit</button>
+    </form>
+  </div>
+  
+  
+  
